fix: sidebar overlaps header

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -12,7 +12,7 @@
     display: flex;
     flex-direction: column;
     min-height: 100vh;
-    padding: 20px 0;
+    padding: 20px 40px;
     font-size: calc(10px + 2vmin);
     color: white;
     background: black;
